MacroRegister locking possibility was introduced