@@ -24,9 +24,25 @@ public class MacroRegister implements javax0.jamal.api.MacroRegister {
     private final List<Delimiters> delimiters = new ArrayList<>();
     private final List<List<Delimiters>> savedDelimiters = new ArrayList<>();
     private final Deque<Object> stackCheckObjects = new LinkedList<>();
+    private boolean registerLocked = false;
 
     public MacroRegister() {
-        push(null);
+        try {
+            push(null);
+        } catch (BadSyntax badSyntax) {
+            throw new RuntimeException("It must not happen. We just initialized registerLocked to false.");
+        }
+    }
+
+    /**
+     * When defining a new macro then this offset is used from the end. It is 1 or 2 because we substract this value
+     * from the length of the stack, and the indexing starts with zero, therefore the last element is length-1, but when
+     * that locked then the last writable element is length-2
+     *
+     * @return
+     */
+    private int writableOffset() {
+        return registerLocked ? 2 : 1;
     }
 
     public <T extends Identified> Optional<T> getUserDefined(String id) {
@@ -66,28 +82,28 @@ public class MacroRegister implements javax0.jamal.api.MacroRegister {
 
     @Override
     public void define(Identified macro) {
-        udMacroStack.get(udMacroStack.size() - 1).put(macro.getId(), macro);
+        udMacroStack.get(udMacroStack.size() - writableOffset()).put(macro.getId(), macro);
     }
 
     @Override
     public void define(Macro macro) {
-        macroStack.get(macroStack.size() - 1).put(macro.getId(), macro);
+        define(macro, macro.getId());
     }
 
     @Override
     public void define(Macro macro, String alias) {
-        macroStack.get(macroStack.size() - 1).put(alias, macro);
+        macroStack.get(macroStack.size() - writableOffset()).put(alias, macro);
     }
 
     @Override
     public void export(String id) throws BadSyntax {
-        if (udMacroStack.size() > 1) {
-            var macro = udMacroStack.get(udMacroStack.size() - 1).get(id);
+        if (udMacroStack.size() > writableOffset()) {
+            var macro = udMacroStack.get(udMacroStack.size() - writableOffset()).get(id);
             if (macro == null) {
                 throw new BadSyntax("Macro '" + id + "' cannot be exported");
             }
-            udMacroStack.get(udMacroStack.size() - 2).put(id, macro);
-            udMacroStack.get(udMacroStack.size() - 1).remove(id);
+            udMacroStack.get(udMacroStack.size() - writableOffset() - 1).put(id, macro);
+            udMacroStack.get(udMacroStack.size() - writableOffset()).remove(id);
         } else {
             throw new BadSyntax("Macro '" + id + "' cannot be exported from the top level");
         }
@@ -100,7 +116,11 @@ public class MacroRegister implements javax0.jamal.api.MacroRegister {
     }
 
     @Override
-    public void push(Marker check) {
+    public void push(Marker check) throws BadSyntax {
+        if (registerLocked) {
+            throw new BadSyntax("The register is locked when trying to open a new layer.");
+        }
+        registerLocked = false;
         stackCheckObjects.addLast(check);
         macroStack.forEach(macros -> macros.values().forEach(macro -> stack(macro, Stackable::push)));
         macroStack.add(new HashMap<>());
@@ -117,14 +137,33 @@ public class MacroRegister implements javax0.jamal.api.MacroRegister {
                 " for a level pushed by " +
                 stackCheckObjects.getLast());
         }
-        stackCheckObjects.removeLast();
-        macroStack.remove(macroStack.size() - 1);
-        macroStack.forEach(macros -> macros.values().forEach(macro -> stack(macro, Stackable::pop)));
-        udMacroStack.remove(udMacroStack.size() - 1);
-        delimiters.remove(delimiters.size() - 1);
-        savedDelimiters.remove(savedDelimiters.size() - 1);
+        if (udMacroStack.size() > 1) {
+            stackCheckObjects.removeLast();
+            macroStack.remove(macroStack.size() - 1);
+            macroStack.forEach(macros -> macros.values().forEach(macro -> stack(macro, Stackable::pop)));
+            udMacroStack.remove(udMacroStack.size() - 1);
+            delimiters.remove(delimiters.size() - 1);
+            savedDelimiters.remove(savedDelimiters.size() - 1);
+        } else {
+            throw new BadSyntax("Cannot close the top level scope.");
+        }
     }
 
+    @Override
+    public void lock(Marker check) throws BadSyntax {
+        if (!Objects.equals(check, stackCheckObjects.getLast())) {
+            throw new BadSyntax("Lock was performed by " +
+                check +
+                " for a level pushed by " +
+                stackCheckObjects.getLast());
+        }
+
+        if (udMacroStack.size() > 1) {
+            registerLocked = true;
+        } else {
+            throw new BadSyntax("Cannot lock the top level scope.");
+        }
+    }
 
     @Override
     public String open() {
